feat(server): add the quit command
